// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`equalTo() should fail when value is not equal to validValue 1`] = `
Object {
  "children": Array [],
  "message": "Value should equal to test",
  "path": "",
}
`;

exports[`equalTo() should fail when value is not equal to validValue which is a reference 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "message": "Value should equal to test",
      "path": "b",
    },
  ],
  "message": "Value should have a valid shape",
  "path": "",
}
`;

exports[`equalTo() should support custom message 1`] = `
Object {
  "children": Array [],
  "message": "Custom message",
  "path": "",
}
`;
